# battle

./: BUGS.md  Cargo.toml  README.md  TODO.md
builder/: Cargo.toml
builder/src/: moves.rs  scripts.rs
crates/builder/: Cargo.toml
crates/builder/src/: lib.rs
engine/: Cargo.toml
engine/src/: lib.rs  target.rs
engine/src/item/: execution.rs  mod.rs  usage.rs
engine/src/moves/: execution.rs  mod.rs
engine/src/scripting/: mod.rs  moves.rs
engine/src/scripting/moves/: ailment.rs  damage.rs  moves.rs  pokemon.rs  random.rs  result.rs
examples/: battle_royale.rs  run.rs  test.rs
src/: ai.rs  battle.rs  data.rs  endpoint.rs  engine.rs  host.rs  item.rs  lib.rs  manager.rs  message.rs  moves.rs  party.rs  player.rs  pokemon.rs  select.rs  state.rs
src/client/: local.rs
src/default_engine/: mod.rs  scripting.rs
src/default_engine/default_scripting/: mod.rs  moves.rs
src/default_engine/default_scripting/moves/: ailment.rs  pokemon.rs  random.rs  result.rs
src/default_engine/item/: execution.rs  mod.rs  scripting.rs
src/default_engine/moves/: execution.rs  mod.rs  scripting.rs
src/default_engine/moves/scripting/: damage.rs  moves.rs  pokemon.rs  random.rs  result.rs
src/engine/: active.rs  default.rs  player.rs  pokemon.rs
src/engine/default/: moves.rs  scripting.rs
src/engine/default/scripting/: damage.rs  moves.rs  pokemon.rs  result.rs
src/gui/panels/: moves.rs
src/host/: collection.rs  collections.rs  engine.rs  moves.rs  party.rs  player.rs  pokemon.rs  queue.rs  saved.rs  state.rs  timer.rs
src/host/engine/: default.rs
src/host/engine/default/: scripting.rs
src/host/engine/default/scripting/: pokemon.rs  result.rs
src/item/: engine.rs
src/moves/: client.rs  damage.rs  engine.rs  persistent.rs  queue.rs  target.rs  usage.rs
src/moves/engine/: default.rs
src/moves/engine/default/: damage.rs  moves.rs  pokemon.rs  result.rs
src/moves/usage/: damage.rs  engine.rs  result.rs  script.rs  target.rs
src/moves/usage/engine/: default.rs
src/moves/usage/engine/default/: script.rs
src/moves/usage/engine/default/script/: error.rs  moves.rs  pokemon.rs  random.rs
src/moves/usage/script/: rhai.rs
src/moves/usage/script/rhai/: damage.rs  error.rs  moves.rs  pokemon.rs  random.rs
src/party/: battle.rs
src/player/: ai.rs  knowable.rs  settings.rs  validate.rs
src/pokemon/: active.rs  battle.rs  party.rs  remote.rs  stat.rs  unknown.rs  view.rs
src/pokemon/battle/: moves.rs  stat.rs  unknown.rs
src/transitions/closers/: wild.rs
src/transitions/introductions/: basic.rs
