[package]
name = "firecore-battle"
description = "Pokemon battle simulation"
authors = ["Rhys H <donotdoughnut99@gmail.com>"]
version = "0.0.8"
license = "CC0"
edition = "2021"
repository = "https://github.com/fiirecore/battle"
readme = "README.md"
categories = ["game-development", "game-engines"]
keywords = ["pokemon", "battle", "turn-based"]

[features]
default = ["host", "ai", "default_engine_scripting"]

move_engine = ["rand"]
item_engine = ["move_engine"]

host = ["move_engine", "item_engine", "log", "hashbrown"]

# host_timer = []

default_engine = ["move_engine", "item_engine", "log", "hashbrown"]
default_engine_scripting = ["default_engine", "quad-compat-rhai"]

ai = ["mpsc_endpoint", "rand", "log", "hashbrown"]

mpsc_endpoint = ["crossbeam-channel", "log"]

[dependencies]

firecore-pokedex = { version = "0.0.8", git = "https://github.com/fiirecore/pokedex", rev = "b5279db" }
# firecore-pokedex = { path = "../pokedex" }

serde = { version = "1", features = ["derive"] }

rand = { version = "0.8", default-features = false, optional = true }
log = { version = "0.4", optional = true }
hashbrown = { version = "0.9", optional = true }

quad-compat-rhai = { version = "1.4.0", git = "https://github.com/DoNotDoughnut/rhai", rev = "83648f3", optional = true }

crossbeam-channel = { version = "0.5", optional = true }

[dev-dependencies]
simple_logger = "1"
rand = { version = "0.8", default-features = false, features = ["small_rng"] }

[workspace]
members = ["builder"]