[package]
name = "firecore-battle"
description = "Pokemon battle simulation"
authors = ["Rhys H <donotdoughnut99@gmail.com>"]
version = "0.0.9"
license = "CC0-1.0"
edition = "2021"
repository = "https://github.com/fiirecore/battle"
readme = "README.md"
categories = ["game-development", "game-engines"]
keywords = ["pokemon", "battle", "turn-based"]

[features]
default = ["host", "ai", "default_engine_scripting"]

engine = ["rand"]

host = ["engine", "log"]

default_engine = ["engine", "log"]
default_engine_scripting = ["default_engine", "rhai"]


ai = ["mpsc_endpoint", "rand", "log"]

mpsc_endpoint = ["crossbeam-channel", "log"]

[dependencies]

firecore-pokedex = { version = "0.0.9" }# , git = "https://github.com/fiirecore/pokedex", rev = "83e97db" }"
# firecore-pokedex = { path = "../pokedex" }

serde = { version = "1", features = ["derive"] }
hashbrown = { version = "0.12", features = ["serde"] }
enum-map = "2"

rand = { version = "0.8", default-features = false, optional = true }
log = { version = "0.4", optional = true }
rhai = { version = "1", optional = true }
crossbeam-channel = { version = "0.5", optional = true }

[dev-dependencies]
simple_logger = "2"
rand = { version = "0.8", default-features = false, features = ["small_rng"] }