[package]
name = "firecore-battle"
description = "Pokemon battle simulation"
authors = ["Rhys H <donotdoughnut99@gmail.com>"]
version = "0.0.10"
license = "CC0-1.0"
edition = "2021"
repository = "https://github.com/fiirecore/battle"
readme = "README.md"
categories = ["game-development", "game-engines"]
keywords = ["pokemon", "battle", "turn-based"]

[features]
default = ["host", "ai"]

engine = ["rand"]

host = ["engine"]

ai = ["mpsc_endpoint", "rand"]

mpsc_endpoint = ["crossbeam-channel"]

[dependencies]

serde = { version = "1", features = ["derive"] }
hashbrown = { version = "0.12", features = ["serde"] }
tinystr = { version = "0.7", features = ["serde"] }
enum-map = "2"

rand = { version = "0.8", default-features = false, optional = true }
crossbeam-channel = { version = "0.5", optional = true }

[dependencies.firecore-pokedex]
version = "0.0.10"
git = "https://github.com/fiirecore/pokedex"
rev = "f1188e8"
# path = "../pokedex"

[dev-dependencies]
log = "0.4"
simple_logger = "2"
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
firecore-battle-engine = { path = "engine" }

[patch.crates-io]
firecore-pokedex = { path = "../pokedex" }

[workspace]
members = ["engine"]
default-members = ["engine"]
